design final static

--- a/design-final-static/index.html
+++ b/design-final-static/index.html
@@ -37,7 +37,7 @@
             <div class="row1-wrapper">
                 <div class="row1 container">
                     <div class="row1-text">Try Design, You'll Like It</div>
-                    <div class="showme"><a href="#">SHOW ME THEN!!!</a> </div>
+                    <div class="showme"><a href="#">SHOW ME THEN !!!</a> </div>
                 </div>
 
             </div>
@@ -175,17 +175,21 @@
                             <li>
                                 <div class="card">
                                     <figure><img src="./images/card-img.png" alt="img"></figure>
+                                    <div class="card-bcg">
 
-                                    <figcaption>WEB DESIGN</figcaption>
-                                    <p>Voluptate provident itaque deleniti laudantium, odio aut, quos alias a porro dicta incidunt debitis iste consectetur officiis ad distinctio voluptas omnis aspernatur.</p>
+                                        <p>WEB DESIGN</p>
+                                        <p>Voluptate provident itaque deleniti laudantium, odio aut, quos alias a porro dicta incidunt debitis iste.</p>
+                                    </div>
                                 </div>
+
                             </li>
                             <li>
                                 <div class="card">
                                     <figure><img src="./images/card-img.png" alt="img"></figure>
                                     <div class="card-bcg">
-                                        <figcaption>PHOTOGRAPHY</figcaption>
-                                        <p>Voluptate provident itaque deleniti laudantium, odio aut, quos alias a porro dicta incidunt debitis iste consectetur officiis ad distinctio voluptas omnis aspernatur.</p>
+                                        <p>PHOTOGRAPHY</p>
+                                        <p>Voluptate provident itaque deleniti laudantium, odio aut, quos alias a porro dicta incidunt debitis iste.</p>
+
 
                                     </div>
                                 </div>
@@ -194,8 +198,9 @@
                                 <div class="card">
                                     <figure><img src="./images/card-img.png" alt="img"></figure>
                                     <div class="card-bcg">
-                                        <figcaption>GRAPHIC DESIGN</figcaption>
-                                        <p>Voluptate provident itaque deleniti laudantium, odio aut, quos alias a porro dicta incidunt debitis iste consectetur officiis ad distinctio voluptas omnis aspernatur.</p>
+                                        <p>GRAPHIC DESIGN</p>
+                                        <p>Voluptate provident itaque deleniti laudantium, odio aut, quos alias a porro dicta incidunt debitis iste.</p>
+
 
                                     </div>
 
@@ -205,8 +210,9 @@
                                 <div class="card">
                                     <figure><img src="./images/card-img.png" alt="img"></figure>
                                     <div class="card-bcg">
-                                        <figcaption>WEB DESIGN</figcaption>
-                                        <p>Voluptate provident itaque deleniti laudantium, odio aut, quos alias a porro dicta incidunt debitis iste consectetur officiis ad distinctio voluptas omnis aspernatur.</p>
+                                        <p>WEB DESIGN</p>
+                                        <p>Voluptate provident itaque deleniti laudantium, odio aut, quos alias a porro dicta incidunt debitis iste.</p>
+
 
                                     </div>
                                 </div>
@@ -215,8 +221,9 @@
                                 <div class="card">
                                     <figure><img src="./images/card-img.png" alt="img"></figure>
                                     <div class="card-bcg">
-                                        <figcaption>PROGRAMMING</figcaption>
-                                        <p>Voluptate provident itaque deleniti laudantium, odio aut, quos alias a porro dicta incidunt debitis iste consectetur officiis ad distinctio voluptas omnis aspernatur.</p>
+                                        <p>PROGRAMMING</p>
+                                        <p>Voluptate provident itaque deleniti laudantium, odio aut, quos alias a porro dicta incidunt debitis iste.</p>
+
 
                                     </div>
                                 </div>
@@ -226,8 +233,10 @@
                                     <figure><img src="./images/card-img.png" alt="img"></figure>
                                     <div class="card-bcg">
 
-                                        <figcaption>PROGRAMMING</figcaption>
-                                        <p>Voluptate provident itaque deleniti laudantium, odio aut, quos alias a porro dicta incidunt debitis iste consectetur officiis ad distinctio voluptas omnis aspernatur.</p>
+                                        <p>PROGRAMMING</p>
+                                        <p>Voluptate provident itaque deleniti laudantium, odio aut, quos alias a porro dicta incidunt debitis iste.</p>
+
+
 
                                     </div>
                                 </div>
@@ -254,21 +263,21 @@
                             </div>
                         </li>
                         <li>
-                            <div>
+                            <div class="stats">
                                 <figure><img src="./images/click-icon.png" alt="click"></figure>
                                 <div class="click-stats">9135694</div>
                                 <p>CLICK PRESSED</p>
                             </div>
                         </li>
                         <li>
-                            <div>
+                            <div class="stats">
                                 <figure><img src="./images/mail-icon.png" alt="mail"></figure>
                                 <div class="mail-stats">9564</div>
                                 <p>MAILS SENT AND RECEIVED</p>
                             </div>
                         </li>
                         <li>
-                            <div>
+                            <div class="stats">
                                 <figure><img src="./images/comment-icon.png" alt="comment"></figure>
                                 <div class="comment-stats">712</div>
                                 <p>JOKES TOLD</p>
@@ -278,7 +287,191 @@
                 </div>
 
             </div>
+            <div class="row7-wrapper">
+                <div class="row7 container">
+                    <div class="row7-text">Behold the Power of Team</div>
+                    <div class="row7-para">
+                        <p> Sit amet consectetur adipisicing elit. Pariatur reprehenderit ducimus, repellendus eaque quidem obcaecati. Iure unde cum veniam inventore aliquid iste, est veritatis! Tempore pariatur animi quae reprehenderit ducimus.</p>
+                    </div>
+                    <div class="team-card clearfix">
+                        <ul>
+                            <li>
+                                <div class="team ">
+                                    <figure><img src="./images/team-img.png" alt="img"></figure>
+
+                                    <div class="team-bcg">
+                                        <span class="name">John Doe</span>
+                                        <span class="position">Graphic Designer</span>
+                                        <p>Voluptate provident itaque deleniti laudantium, odio aut, quos alias a porro dicta incidunt debitis iste.</p>
+
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="team">
+                                    <figure><img src="./images/team-img.png" alt="img"></figure>
+                                    <div class="team-bcg">
+                                        <span class="name">John Doe</span>
+                                        <span class="position">Graphic Designer</span>
+                                        <p>Voluptate provident itaque deleniti laudantium, odio aut, quos alias a porro dicta incidunt debitis iste.</p>
+
+
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="team">
+                                    <figure><img src="./images/team-img.png" alt="img"></figure>
+                                    <div class="team-bcg">
+                                        <span class="name">John Doe</span>
+                                        <span class="position">Graphic Designer</span>
+                                        <p>Voluptate provident itaque deleniti laudantium, odio aut, quos alias a porro dicta incidunt debitis iste.</p>
+
+
+
+                                    </div>
+
+                                </div>
+                            </li>
+                            <li>
+                                <div class="team">
+                                    <figure><img src="./images/team-img.png" alt="img"></figure>
+                                    <div class="team-bcg">
+                                        <span class="name">John Doe</span>
+                                        <span class="position">Graphic Designer</span>
+                                        <p>Voluptate provident itaque deleniti laudantium, odio aut, quos alias a porro dicta incidunt debitis iste.</p>
+
+
+                                    </div>
+
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="row8-wrapper">
+                <div class="row8 container">
+                    <figure class="quote"><img src="./images/quote.png" alt=""></figure>
+                    <div class="quote-info">
+                        <span class="quote-text">We realize and actualize your vision.</span>
+                        <span class="quoted-by">John Doe</span>
+                        <div class="nav">
+                            <figure class="prev">
+                                <a href="#"><img src="./images/prev.png" alt="previous"></a>
+                            </figure>
+                            <figure class="next">
+                                <a href="#"><img src="./images/next.png" alt=next></a>
+                            </figure>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <div class="row9-wrapper">
+                <div class="row9 container">
+                    <p>Want to hear more story, subscribe to our newsletter.</p>
+                    <div class="subscribe">
+                        <a href="#"> Subscribe</a>
+                    </div>
+
+
+                </div>
+            </div>
+            <div class="row10-wrapper">
+                <div class="row10 container clearfix">
+                    <div class="about-img">
+                        <figure><img src="./images/about-img.png" alt="img"></figure>
+                    </div>
+                    <div class="about">
+                        <h2>About Some Site</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias vel excepturi minus, dolorem quod molestiae numquam tenetur deserunt officiis quam itaque? Et, fuga autem eum iusto vel qui dolorum atque.</p>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur doloremque totam, perspiciatis repellat provident exercitationem! Rerum molestias nemo mollitia voluptas, ducimus et corrupti quas at distinctio dolorum saepe vitae
+                            eligendi.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="row11-wrapper">
+                <div class="row11 container clearfix">
+                    <div class="row11-phone">
+                        <figure><img src="./images/phn-2.png" alt="phone"></figure>
+                    </div>
+                    <div class="modern">
+                        <p class="modern1">MODERN DESIGN</p>
+                        <p class="responsive">Responsive Design</p>
+                        <p class="modern-text">Lorem, ipsum adipisicing elit. Nisi unde ipsam nam distinctio facere. Laborum tempora temporibus, in aspernatur architecto quia pariatur officiis eum sit assumenda officia maiores quis exercitationem.</p>
+                        <p class="modern-text">Sit assumenda officia maiores quis exercitationem.</p>
+
+                    </div>
+                </div>
+            </div>
+            <div class="row12-wrapper">
+                <div class="row12 container clearfix">
+
+                    <div class="row12-text">What clients say</div>
+                    <div class="row12-para">
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore eaque facere esse velit, ab quibusdam doloribus quis officia corrupti? Reiciendis, dolorum? Reiciendis voluptas blanditiis nisi placeat sapiente itaque similique
+                            dolor.
+                        </p>
+                    </div>
+
+
+                    <div class="client-card">
+                        <ul>
+                            <li class="client">
+                                <span class="clientname">John Doe</span>
+                                <span class="clientposition">Graphic Designer</span>
+                                <p>"Voluptate provident itaque deleniti laudantium, odio aut, quos alias a porro dicta incidunt debitis iste."</p>
+                            </li>
+                            <li class="client">
+                                <span class="clientname">John Doe</span>
+                                <span class="clientposition">Graphic Designer</span>
+                                <p>"Voluptate provident itaque deleniti laudantium, odio aut, quos alias a porro dicta incidunt debitis iste."</p>
+                            </li>
+                            <li class="client">
+                                <span class="clientname">John Doe</span>
+                                <span class="clientposition">Graphic Designer</span>
+                                <p>"Voluptate provident itaque deleniti laudantium, odio aut, quos alias a porro dicta incidunt debitis iste."</p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="row13-wrapper">
+                <div class="row13 container ">
+
+                    <div class="row13-text">Contact Us</div>
+                    <div class="row13-para">
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore eaque facere esse velit, ab quibusdam doloribus quis officia corrupti? Reiciendis, dolorum? Reiciendis voluptas blanditiis nisi placeat sapiente itaque similique
+                            dolor.
+                        </p>
+                    </div>
+                    <div class="contactform clearfix">
+                        <form class="contact" action="#" method="post">
+                            <input type="text" name="name" id="name" placeholder="Your name here">
+                            <input type="text" name="mail" id="mail" placeholder="Your mail here">
+                            <input type="text" name="msg" id="msg" placeholder="Your message here">
+                            <button type="submit">Send Message</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="row14-wrapper">
+                <div class="row14 container clearfix">
+                    <div class="map"><img src="./images/map.PNG" alt="map"></div>
+                    <div class="address">
+                        <p>Awesome Address 435</p>
+                        <p>mail@someone.com</p>
+                        <p>+9779845678912</p>
+                    </div>
+                </div>
+            </div>
+            <footer>
+                <div class="footer-text">© 2017 - <span>Zoom </span>All Right Reserved</div>
+            </footer>
         </main>
+
     </div>
 </body>
 
