design final static

--- a/design-final-static/index.html
+++ b/design-final-static/index.html
@@ -435,7 +435,7 @@
                 </div>
             </div>
             <div class="row13-wrapper ">
-                <div class="row13 container ">
+                <div class="row13 container clearfix">
 
                     <div class="row13-text ">Contact Us</div>
                     <div class="row13-para ">
@@ -443,12 +443,12 @@
                             dolor.
                         </p>
                     </div>
-                    <div class="contactform clearfix ">
+                    <div class="contactform clearfix">
                         <form class="contact " action="# " method="post ">
-                            <input type="text " name="name " id="name " placeholder="Your name here ">
-                            <input type="text " name="mail " id="mail " placeholder="Your mail here ">
-                            <input type="text " name="msg " id="msg " placeholder="Your message here ">
-                            <button type="submit ">Send Message</button>
+                            <input type="text" name="name" id="name" placeholder="Your name here ">
+                            <input type="text" name="mail" id="mail" placeholder="Your mail here ">
+                            <input type="text" name="msg" id="msg" placeholder="Your message here ">
+                            <button type="submit">Send Message</button>
                         </form>
                     </div>
                 </div>
