--- a/index.html
+++ b/index.html
@@ -82,15 +82,15 @@
 			</tr>
 			<tr>
 				<td>JS Assignment 1: Image Slider</td>
-				<td><a href="#">Demo</td>
-				<td><a href="#">Code</td>
+				<td><a href="js-projects/ast1/">Image Slider</td>
+				<td><a href="https://github.com/LizaAmatya/Leapfrog/tree/master/js-projects/ast1">Code</td>
 				<!-- <td></td> -->
 				<!-- <td></td> -->
 			</tr>
 			<tr>
 				<td>JS Assignment 2: Image Slider with hold times</td>
-				<td><a href="#">Demo</td>
-				<td><a href="#">Code</td>
+				<td><a href="js-projects/ast2/">Image Slider</td>
+				<td><a href="https://github.com/LizaAmatya/Leapfrog/tree/master/js-projects/ast2">Code</td>
 				<!-- <td>Complete</td> -->
 				<!-- <td>Image slider</td> -->
 			</tr>
