--- a/js-projects/ast2/index.html
+++ b/js-projects/ast2/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div id="main"></div>
-    <script src="./script1.js"></script>
+    <script src="./script.js"></script>
 </body>
 
 </html>
