--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 			</tr>
 			<tr>
 				<td>JS Assignment 3: Box Collision and Ant Smasher</td>
-				<td><a href="#">Demo</td>
+				<td><a href="js-projects/ast3/">Ball Collision</td>
 				<td><a href="#">Code</td>
 				<!-- <td>Complete</td> -->
 				<!-- <td></td> -->
