--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 			<tr>
 				<td>JS Assignment 3: Box Collision and Ant Smasher</td>
 				<td><a href="js-projects/ast3/">Ball Collision</td>
-				<td><a href="#">Code</td>
+				<td><a href="https://github.com/LizaAmatya/Leapfrog/tree/master/js-projects/ast3">Ball Collision</td>
 				<!-- <td>Complete</td> -->
 				<!-- <td></td> -->
 			</tr>
