--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 			</tr>
 			<tr>
 				<td>JS Assignment 4: Car Lane Game with Bullet Implementation</td>
-				<td><a href="#">Demo</td>
+				<td><a href="js-projects/ast4/">Demo</td>
 				<td><a href="#">Code</td>
 				<!-- <td>Complete</td> -->
 				<!-- <td></td> -->
