--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
 			</tr>
 			<tr>
 				<td>JS Assignment 4: Car Lane Game with Bullet Implementation</td>
-				<td><a href="js-projects/ast4/">Demo</td>
-				<td><a href="#">Code</td>
+				<td><a href="js-projects/ast4/">Car Game</td>
+				<td><a href="https://github.com/LizaAmatya/Leapfrog/tree/master/js-projects/ast4">Car game</td>
 				<!-- <td>Complete</td> -->
 				<!-- <td></td> -->
 			</tr>
