--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
 			</tr>
 			<tr>
 				<td>JS Assignment 5: Flappy Bird</td>
-				<td><a href="#">Demo</td>
-				<td><a href="#">Code</td>
+				<td><a href="js-projects/ast5/">Flappy Bird</td>
+				<td><a href="#">Flappy Bird</td>
 				<!-- <td>Complete</td> -->
 				<!-- <td>Flappy Bird Game</td> -->
 			</tr>
