--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 			<tr>
 				<td>JS Assignment 5: Flappy Bird</td>
 				<td><a href="js-projects/ast5/">Flappy Bird</td>
-				<td><a href="#">Flappy Bird</td>
+				<td><a href="https://github.com/LizaAmatya/Leapfrog/tree/master/js-projects/ast5">Flappy Bird</td>
 				<!-- <td>Complete</td> -->
 				<!-- <td>Flappy Bird Game</td> -->
 			</tr>
