--- a/js-projects/ast5/index.html
+++ b/js-projects/ast5/index.html
@@ -12,10 +12,12 @@
 <body>
     <div class="main" id="main">
         <canvas class="canvas" id="canvas"></canvas>
+        <canvas class="score-wrap" id='score-wrap'>Score: </canvas>
     </div>
     <script src="./js/bcg.js"></script>
     <script src="./js/pipe.js"></script>
     <script src="./js/bird.js"></script>
+    <script src="./js/score.js"></script>
     <script src="./js/script.js"></script>
 
 </body>
