--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
 			</tr>
 			<tr>
 				<td>JS Assignment 6: Helix Animation</td>
-				<td><a href="#">Demo</td>
-				<td><a href="#">Code</td>
+				<td><a href="./js-projects/ast6/">Helix Animation</a></td>
+                <td><a href="https://github.com/LizaAmatya/Leapfrog/tree/master/js-projects/ast6">Helix Animation</td>
 				<!-- <td>Complete</td> -->
 				<!-- <td>Animation</td> -->
 			</tr>
