--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 			</tr>
 			<tr>
 				<td>JS Final Project</td>
-				<td><a href="js-projects/rubik's-cube/">Rubik's cube</td>
+				<td><a href="js-projects/rubiks-cube/">Rubik's cube</td>
 				<td><a href="https://github.com/LizaAmatya/Leapfrog/tree/master/js-projects/rubik's-cube">Rubik's cube</td>
 				<!-- <td>Complete</td> -->
 				<!-- <td></td> -->
