--- a/js-projects/rubiks-cube/index.html
+++ b/js-projects/rubiks-cube/index.html
@@ -6,10 +6,10 @@
 </head>
 
 <body>
-
+    <h3>Use up and down arrow for X and Y block rotation</h3>
     <canvas id="canvas">
 			Your browser doesn't support canvas features.
-		</canvas>
+	</canvas>
 
     <script src="js/projection.js"></script>
     <script src="js/animation.js"></script>
